arrumando BR do CSV programacao

--- a/amostras/testeProgramacao.htm
+++ b/amostras/testeProgramacao.htm
@@ -52,7 +52,7 @@
 <hr></section><section id="iD02_12"><p><strong>PROGRAMACAO</strong>  Apresentação Oral área 9- AO0036-AO0045</p>
 <p><strong>Horário: </strong>08:00h - 11:30h</p>
 <p><strong>Local: </strong><span class="location1" idref="loc?">Carvalho III</span></p>
-<hr></section><section id="iD02_13"><p><strong>PROGRAMACAO</strong>  SIMPÓSIO I -  Regeneração Óssea e Osseointegração: Em Busca de Modelos Preditivos&amp;gt;br&amp;gt;Ministrador: Paulo Guilherme Coelho – New York University College of Dentistry</p>
+<hr></section><section id="iD02_13"><p><strong>PROGRAMACAO</strong>  SIMPÓSIO I -  Regeneração Óssea e Osseointegração: Em Busca de Modelos PreditivosMinistrador: Paulo Guilherme Coelho – New York University College of Dentistry</p>
 <p><strong>Horário: </strong>08:30h - 11:30h</p>
 <p><strong>Local: </strong><span class="location1" idref="loc?">Jequitibá</span></p>
 <hr></section><section id="iD02_14"><p><strong>PROGRAMACAO</strong>  Retirada dos Painéis ASPIRANTES e EFETIVOS - SESSÃO I</p>
@@ -100,7 +100,7 @@
 <hr></section><section id="iD02_28"><p><strong>PROGRAMACAO</strong>  SIMPÓSIO II: REUNIÃO DE EDITORES CIENTÍFICOS</p>
 <p><strong>Horário: </strong>13:30h - 16:30h</p>
 <p><strong>Local: </strong><span class="location1" idref="loc?">Carvalho I</span></p>
-<hr></section><section id="iD02_29"><p><strong>PROGRAMACAO</strong>  Simpósio: Erosão do esmalte dental: medidas preventivas para a erosão do esmalte e mecanismo de ação de Regenerate. &amp;gt;br&amp;gt;Apoio Regenerate&amp;gt;br&amp;gt;Ministradores: &amp;gt;br&amp;gt;Marília Afonso Rabelo Buzalaf - FORP-USP Responsável por Pesquisa e Desenvolvimento Unilever</p>
+<hr></section><section id="iD02_29"><p><strong>PROGRAMACAO</strong>  Simpósio: Erosão do esmalte dental: medidas preventivas para a erosão do esmalte e mecanismo de ação de Regenerate. Apoio RegenerateMinistradores: Marília Afonso Rabelo Buzalaf - FORP-USP Responsável por Pesquisa e Desenvolvimento Unilever</p>
 <p><strong>Horário: </strong>13:30h - 14:30h</p>
 <p><strong>Local: </strong><span class="location1" idref="loc?">Jequitibá</span></p>
 <hr></section><section id="iD02_30"><p><strong>PROGRAMACAO</strong>  Retirada Painéis ASPIRANTES e EFETIVOS - SESSÃO II</p>
@@ -133,7 +133,7 @@
 <hr></section><section id="iD02_39"><p><strong>PROGRAMACAO</strong>  Reunião de Grupo SESSÃO I e II - área 10</p>
 <p><strong>Horário: </strong>17:00h - 18:30h</p>
 <p><strong>Local: </strong><span class="location1" idref="loc?">Sala Seringueira</span></p>
-<hr></section><section id="iD02_40"><p><strong>PROGRAMACAO</strong>  Abertura Solene da 32ª Reunião Anual da SBPqO &amp;gt;br&amp;gt;Conferência: “Global Oral Health Research and the IADR” &amp;gt;br&amp;gt;Ministrador: Christopher Fox- Diretor Executivo da IADR</p>
+<hr></section><section id="iD02_40"><p><strong>PROGRAMACAO</strong>  Abertura Solene da 32ª Reunião Anual da SBPqO Conferência: “Global Oral Health Research and the IADR” Ministrador: Christopher Fox- Diretor Executivo da IADR</p>
 <p><strong>Horário: </strong>19:00h - h</p>
 <p><strong>Local: </strong><span class="location1" idref="loc?">Auditório Jequitibá</span></p>
 <hr></section><section id="iD02_41"><p><strong>PROGRAMACAO</strong>  Coquetel de Boas-Vindas</p>
@@ -178,7 +178,7 @@
 <hr></section><section id="iD03_11"><p><strong>PROGRAMACAO</strong>  Apresentação dos Projetos de Pesquisa área 2,3,7 e 10</p>
 <p><strong>Horário: </strong>08:30h - 11:30h</p>
 <p><strong>Local: </strong><span class="location1" idref="loc?">Acácias</span></p>
-<hr></section><section id="iD03_12"><p><strong>PROGRAMACAO</strong>  SIMPÓSIO: PESQUISA CLÍNICA EM ODONTOLOGIA - Apoio ORAL-B&amp;gt;br&amp;gt;Ministradores: &amp;gt;br&amp;gt;Claudio Mendes Pannuti - FOUSP&amp;gt;br&amp;gt;Alessandro Dourado Loguercio – UEPG&amp;gt;br&amp;gt;Marcio Zaffalon Casati - UNICAMP</p>
+<hr></section><section id="iD03_12"><p><strong>PROGRAMACAO</strong>  SIMPÓSIO: PESQUISA CLÍNICA EM ODONTOLOGIA - Apoio ORAL-BMinistradores: Claudio Mendes Pannuti - FOUSPAlessandro Dourado Loguercio – UEPGMarcio Zaffalon Casati - UNICAMP</p>
 <p><strong>Horário: </strong>08:30h - 11:30h</p>
 <p><strong>Local: </strong><span class="location1" idref="loc?">Carvalho II</span></p>
 <hr></section><section id="iD03_13"><p><strong>PROGRAMACAO</strong>  Apresentação Oral área 2 – AO057-AO068</p>
@@ -238,10 +238,10 @@
 <hr></section><section id="iD03_31"><p><strong>PROGRAMACAO</strong>  Apresentação e arguição  POAC</p>
 <p><strong>Horário: </strong>13:30h - 17:00h</p>
 <p><strong>Local: </strong><span class="location1" idref="loc?">Foyer III</span></p>
-<hr></section><section id="iD03_32"><p><strong>PROGRAMACAO</strong>  SIMPÓSIO: INOVAÇÃO NA ODONTOLOGIA: DEMANDAS E DESAFIOS ATUAIS&amp;gt;br&amp;gt;Ministradores:&amp;gt;br&amp;gt;Fabrício Ogliari - UFPel&amp;gt;br&amp;gt;Henry Suzuki - Axonal&amp;gt;br&amp;gt;Knud Sorensen - ABIMO&amp;gt;br&amp;gt;Roberto Alcântara - Angelus&amp;gt;br&amp;gt;Valdênio Araújo - ABDI</p>
+<hr></section><section id="iD03_32"><p><strong>PROGRAMACAO</strong>  SIMPÓSIO: INOVAÇÃO NA ODONTOLOGIA: DEMANDAS E DESAFIOS ATUAISMinistradores:Fabrício Ogliari - UFPelHenry Suzuki - AxonalKnud Sorensen - ABIMORoberto Alcântara - AngelusValdênio Araújo - ABDI</p>
 <p><strong>Horário: </strong>13:30h - 16:45h</p>
 <p><strong>Local: </strong><span class="location1" idref="loc?">Carvalho</span></p>
-<hr></section><section id="iD03_33"><p><strong>PROGRAMACAO</strong>  CURSO: Bulk Fill – materiais sem qualquer dúvida?&amp;gt;br&amp;gt;Ministrador: Siegward Heintze – Chefe do Departamento de Pesquisa Pré-Clínica da Ivoclar&amp;gt;br&amp;gt;Apoio: Ivoclar Vivadent</p>
+<hr></section><section id="iD03_33"><p><strong>PROGRAMACAO</strong>  CURSO: Bulk Fill – materiais sem qualquer dúvida?Ministrador: Siegward Heintze – Chefe do Departamento de Pesquisa Pré-Clínica da IvoclarApoio: Ivoclar Vivadent</p>
 <p><strong>Horário: </strong>13:30h - 17:00h</p>
 <p><strong>Local: </strong><span class="location1" idref="loc?">Jequitibá</span></p>
 <hr></section><section id="iD03_34"><p><strong>PROGRAMACAO</strong>  Apresentação dos Projetos de Pesquisa  área 3 e 10</p>
@@ -316,10 +316,10 @@
 <hr></section><section id="iD04_9"><p><strong>PROGRAMACAO</strong>  Apresentação dos Projetos de Pesquisa área 1, 5 e 6</p>
 <p><strong>Horário: </strong>08:30h - 11:30h</p>
 <p><strong>Local: </strong><span class="location1" idref="loc?">Sala Acácias</span></p>
-<hr></section><section id="iD04_10"><p><strong>PROGRAMACAO</strong>  SIMPÓSIO: INOVAÇÃO E PESQUISA COM LASER- REALIDADE ATUAL E TENDÊNCIAS FUTURAS&amp;gt;br&amp;gt;Ministradores:&amp;gt;br&amp;gt;Carlos de Paula Eduardo - FOUSP&amp;gt;br&amp;gt;Luciane Hiramatsu Azevedo - USP&amp;gt;br&amp;gt;Manoel Damião Sousa Neto - FORP - USP&amp;gt;br&amp;gt;Vanderlei Salvador Bagnato - USP- IFSC&amp;gt;br&amp;gt;Martha Simões – IPEN-USP&amp;gt;br&amp;gt;Moderador: Sergio Eduardo Paiva Gonçalves - UNESP- SJC&amp;gt;br&amp;gt;Ativador: Jaime Cury – UNICAMP</p>
+<hr></section><section id="iD04_10"><p><strong>PROGRAMACAO</strong>  SIMPÓSIO: INOVAÇÃO E PESQUISA COM LASER- REALIDADE ATUAL E TENDÊNCIAS FUTURASMinistradores:Carlos de Paula Eduardo - FOUSPLuciane Hiramatsu Azevedo - USPManoel Damião Sousa Neto - FORP - USPVanderlei Salvador Bagnato - USP- IFSCMartha Simões – IPEN-USPModerador: Sergio Eduardo Paiva Gonçalves - UNESP- SJCAtivador: Jaime Cury – UNICAMP</p>
 <p><strong>Horário: </strong>08:30h - 12:00h</p>
 <p><strong>Local: </strong><span class="location1" idref="loc?">Carvalho II</span></p>
-<hr></section><section id="iD04_11"><p><strong>PROGRAMACAO</strong>  CURSO: Novos fatores que explicam as falhas na osseointegração e como evitar a perda óssea marginal. &amp;gt;br&amp;gt;Ministrador: Luiz Meirelles - University of Rochester</p>
+<hr></section><section id="iD04_11"><p><strong>PROGRAMACAO</strong>  CURSO: Novos fatores que explicam as falhas na osseointegração e como evitar a perda óssea marginal. Ministrador: Luiz Meirelles - University of Rochester</p>
 <p><strong>Horário: </strong>08:30h - 11:30h</p>
 <p><strong>Local: </strong><span class="location1" idref="loc?">Carvalho III</span></p>
 <hr></section><section id="iD04_12"><p><strong>PROGRAMACAO</strong>  Apresentação Oral área 1 – AO0151-AO0158</p>
@@ -355,7 +355,7 @@
 <hr></section><section id="iD04_22"><p><strong>PROGRAMACAO</strong>  Apresentação e arguição dos Painéis HATTON</p>
 <p><strong>Horário: </strong>13:30h - 17:00h</p>
 <p><strong>Local: </strong><span class="location1" idref="loc?">Sala Jacarandá</span></p>
-<hr></section><section id="iD04_23"><p><strong>PROGRAMACAO</strong>  CURSO: Normas técnicas: como fundamentar seu projeto de PESQUISA &amp;gt;br&amp;gt;Ministrador: Álvaro Della Bona - UPF</p>
+<hr></section><section id="iD04_23"><p><strong>PROGRAMACAO</strong>  CURSO: Normas técnicas: como fundamentar seu projeto de PESQUISA Ministrador: Álvaro Della Bona - UPF</p>
 <p><strong>Horário: </strong>13:30h - 15:30h</p>
 <p><strong>Local: </strong><span class="location1" idref="loc?">Jequitibá</span></p>
 <hr></section><section id="iD04_24"><p><strong>PROGRAMACAO</strong>  Apresentação e arguição dos Projetos de Pesquisa 5 e 6</p>
