--- a/entregas/conteudoExtra/InstrucoesAutores/instrucoes_autores.html
+++ b/entregas/conteudoExtra/InstrucoesAutores/instrucoes_autores.html
@@ -1,3 +1,12 @@
+<!DOCTYPE HTML>
+<html>
+<head>
+	<meta charset="UTF-8">
+	<title>Instru&ccedil;&otilde;es para os autores</title>
+</head>
+
+<body>
+
 <div id="instructions">
 	<div class="container-fluid">
 		<div class="page-header">
@@ -842,3 +851,5 @@
 	</div>
 </div>
 
+</body>
+</html>
