correcao Thiago comissões

--- a/entregas/conteudoExtra/Comissoes/commissoes.html
+++ b/entregas/conteudoExtra/Comissoes/commissoes.html
@@ -56,7 +56,7 @@
 								</li>
 								<li class="list-unstyled">
 									<i class="fa fa-caret-right"></i>
-									Rui Barbosa de Britto Junior (SL MANDIC)
+									Rui Barbosa De Brito Junior (SL MANDIC)
 								</li>
 							</ul>
 							<p><strong>Domingo:</strong> Apresentação Oral</p>
@@ -136,7 +136,7 @@
 							<ul>
 								<li class="list-unstyled">
 									<i class="fa fa-caret-right"></i>
-									Fernado Neves Nogueira (FOUSP )
+									Fernando Neves Nogueira (FOUSP )
 								</li>
 								<li class="list-unstyled">
 									<i class="fa fa-caret-right"></i>
@@ -192,11 +192,11 @@
 							<ul>
 								<li class="list-unstyled">
 									<i class="fa fa-caret-right"></i>
-									Alberto Bottazzo Delbem (FOA/UNESP)
+									Alberto Carlos Botazzo Delbem (FOA/UNESP)
 								</li>
 								<li class="list-unstyled">
 									<i class="fa fa-caret-right"></i>
-									Leandro da Silva Marques (UFVJM )
+									Leandro Silva Marques (UFVJM )
 								</li>
 								<li class="list-unstyled">
 									<i class="fa fa-caret-right"></i>
@@ -279,7 +279,7 @@
 							<ul>
 								<li class="list-unstyled">
 									<i class="fa fa-caret-right"></i>
-									Adriana Bonna Matos (FOUSP)
+									Adriana Bona Matos (FOUSP)
 								</li>
 								<li class="list-unstyled">
 									<i class="fa fa-caret-right"></i>
@@ -291,7 +291,7 @@
 								</li>
 								<li class="list-unstyled">
 									<i class="fa fa-caret-right"></i>
-									Fabrício Mezzomo Colares (UFRGS)
+									Fabricio Mezzomo Collares (UFRGS)
 								</li>
 								<li class="list-unstyled">
 									<i class="fa fa-caret-right"></i>
@@ -299,7 +299,7 @@
 								</li>
 								<li class="list-unstyled">
 									<i class="fa fa-caret-right"></i>
-									Thiago Donassolo (FASURGS)
+									Tiago Aurélio Donassollo (FASURGS)
 								</li>
 								<li class="list-unstyled">
 									<i class="fa fa-caret-right"></i>
@@ -393,7 +393,7 @@
 								</li>
 								<li class="list-unstyled">
 									<i class="fa fa-caret-right"></i>
-									Daniela Michelline dos Santos (FOA/UNESP)
+									Daniela Micheline dos Santos (FOA/UNESP)
 								</li>
 								<li class="list-unstyled">
 									<i class="fa fa-caret-right"></i>
@@ -408,7 +408,7 @@
 								</li>
 								<li class="list-unstyled">
 									<i class="fa fa-caret-right"></i>
-									Paulo Cesar Conti (FOB/USP)
+									Paulo César Rodrigues Conti (FOB/USP)
 								</li>
 								<li class="list-unstyled">
 									<i class="fa fa-caret-right"></i>
@@ -503,7 +503,7 @@
 								</li>
 								<li class="list-unstyled">
 									<i class="fa fa-caret-right"></i>
-									Cláudio Mendes Panntti (FOUSP)
+									Claudio Mendes Pannuti (FOUSP)
 								</li>
 								<li class="list-unstyled">
 									<i class="fa fa-caret-right"></i>
@@ -535,7 +535,7 @@
 								</li>
 								<li class="list-unstyled">
 									<i class="fa fa-caret-right"></i>
-									Mauro Henrique Nogueira de Abreu (UFMG)
+									Mauro Henrique Nogueira Guimarães de Abreu (UFMG)
 								</li>
 								<li class="list-unstyled">
 									<i class="fa fa-caret-right"></i>
@@ -667,11 +667,11 @@
 								</li>
 								<li class="list-unstyled">
 									<i class="fa fa-caret-right"></i>
-									Rafael Xediek Consani (FOP/UNICAMP)
+									Rafael Leonardo Xediek Consani (FOP/UNICAMP)
 								</li>
 								<li class="list-unstyled">
 									<i class="fa fa-caret-right"></i>
-									Daniel Decurcio (UFG)
+									Daniel de Almeida Decurcio (UFG)
 								</li>
 								<li class="list-unstyled">
 									<i class="fa fa-caret-right"></i>
@@ -687,7 +687,7 @@
 								</li>
 								<li class="list-unstyled">
 									<i class="fa fa-caret-right"></i>
-									Camillo Anauate Neto (UNIBAN)
+									Camillo Anauate-netto (UNIBAN)
 								</li>
 								<li class="list-unstyled">
 									<i class="fa fa-caret-right"></i>
@@ -723,11 +723,11 @@
 								</li>
 								<li class="list-unstyled">
 									<i class="fa fa-caret-right"></i>
-									Marcia Carneiro Varela (FOSJC/UNESP)
+									Márcia Carneiro Valera (FOSJC/UNESP)
 								</li>
 								<li class="list-unstyled">
 									<i class="fa fa-caret-right"></i>
-									Glauber do Vale (UFPI)
+									Gláuber Campos Vale (UFPI)
 								</li>
 								<li class="list-unstyled">
 									<i class="fa fa-caret-right"></i>
