Alterações solicitadas pela Kátia [rmp].

--- a/entregas/conteudoExtra/CursosSimposios/cursos.html
+++ b/entregas/conteudoExtra/CursosSimposios/cursos.html
@@ -17,7 +17,7 @@
 
 				<a data-toggle="collapse" data-parent="#accordion" href="#day1">
 					<div class="remote list-group-item accordion-button">
-						<p class="panel-title">Sexta-Feira, 04 de Setembro de 2015</p>
+						<p class="panel-title">Sexta-feira, 04 de Setembro de 2015</p>
 					</div>
 				</a>
 
@@ -58,11 +58,10 @@
 								</li>
 								<li class="list-unstyled">
 									<i class="fa fa-caret-right"></i>
-									Uma nova tecnologia com silicato de cálcio e fosfato para gerenciamento da erosão: Responsável por pesquisa e desenvolvimento da Unilever.
+									Uma nova tecnologia com silicato de cálcio e fosfato para gerenciamento da erosão: Andrew Joiner - Responsável por pesquisa e desenvolvimento da Unilever.
 								</li>
 							</ul>
 							<p><strong>Horário: </strong>13:30h - 14:30h<br><strong>Local: </strong><a class="location1" href="#" idref="loc16">Sala Jequitibá</a></p>
-							<p><strong>Apoio: </strong>Regenerate</p>
 						</section>
 					</div>
 				</div>
@@ -238,6 +237,53 @@
 							</ul>
 							<p><strong>Horário: </strong>13:30h - 15:30h<br><strong>Local: </strong><a class="location1" href="#" idref="loc16">Sala Jequitibá</a></p>
 						</section>
+					</div>
+				</div>
+			</div>
+
+			<div class="panel panel-default menu gray-border-accordion">
+
+				<a data-toggle="collapse" data-parent="#accordion" href="#ll">
+					<div class="remote list-group-item accordion-button">
+						<p class="panel-title">Lunch Learning </p>
+					</div>
+				</a>
+
+				<div id="ll" class="panel-collapse collapse gray-border-accordion-content">
+					<div class="panel-body">
+						
+						<section>
+							<hr>
+							<p>Atividade realizada durante o almoço, onde cada mesa terá  um pesquisador de renome na área que irá apresentar o tema proposto, abrindo uma discussão com até 9 inscritos. O almoço será servido ao longo do tempo desta atividade. É necessária inscrição prévia. </p>
+							<p><strong>Horário: </strong>11:45h as 13:00h</p>
+							<p><strong>Valor: </strong>R$75,00 (o valor já inclui a refeição)</p>
+							<hr>
+						</section>
+
+
+
+
+
+
+						<section>
+							<p>CURSO: <strong>Regeneração Óssea E Osseointegração: Em Busca De Modelos Preditivos</strong></p>
+							<p><strong>Ministrador: </strong></p>
+							<ul>
+								<li class="list-unstyled">
+									<i class="fa fa-caret-right"></i>
+									Paulo Guilherme Coelho (New York University College of Dentistry).
+								</li>
+							</ul>
+
+							<p><strong>Horário: </strong>8:30h - 11:30h<br><strong>Local: </strong><a class="location1" href="#" idref="loc16">Sala Jequitibá</a></p>
+							<hr>
+						</section>
+
+
+
+
+
+
 					</div>
 				</div>
 			</div>
