--- a/entregas/conteudoExtra/ExpedienteRevista/expediente.html
+++ b/entregas/conteudoExtra/ExpedienteRevista/expediente.html
@@ -19,8 +19,7 @@
 					<h4>Publishing Commission</h4>
 					<br>
 					<h4>Scientific Editor</h4>
-					<p>Giuseppe Alexandre Romito (2019)</p>
-					<p>Sigmar de Mello Rode (2014)</p>
+					<p>Giuseppe Alexandre Romito</p>
 					<br>
 					<h4>Honorary Editor</h4>
 					<p>Esther Goldenberg Birman</p>
@@ -38,11 +37,8 @@
 					<p>Andrea Pacheco Silva Hespanha (CRB/8-8151)</p>
 					<p>Natália Roberta Souza Bento F. da Silva (CRB/8-106/2014-RP)</p>
 					<br>
-					<h4>Trainee</h4>
-					<p>Renata Silva Oliveira</p>
-					<br>
 					<h4>Secretary</h4>
-					<p>Simone Gouveia
+					<p>Simone Gouveia</p>
 					<br>
 					<h4>Editorial Board</h4>
 					<p>Brenda Paula Figueiredo Almeida Gomes (Universidade Estadual de Campinas - Unicamp, Brazil)</p>
