--- a/entregas/conteudoExtra/Programacao/programacao.html
+++ b/entregas/conteudoExtra/Programacao/programacao.html
@@ -1,19 +1,19 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="pt-BR"><head><meta http-equiv="content-type" content="text/html; charset=utf-8"></meta><link rel="stylesheet" type="text/css" href="src/css/main.css"></link><title>Programação</title></head><body><div id="schedule"><div class="container-fluid"><div class="page-header"><h1>Programação</h1></div><div class="panel-group" id="accordion"><div xmlns="" class="panel panel-default menu gray-border-accordion">
-<a data-toggle="collapse" data-parent="#accordion" href="#D01"><div class="remote list-group-item accordion-button"><p class="panel-title">(Pré-evento) Quinta-Feira, 03 de Setembro de 2015</p></div></a><div id="D01" class="panel-collapse collapse gray-border-accordion-content"><div class="panel-body">
+<a data-toggle="collapse" data-parent="#accordion" href="#D01"><div class="remote list-group-item accordion-button"><p class="panel-title">Quinta-feira, 03 de Setembro de 2015 (Pré-evento)</p></div></a><div id="D01" class="panel-collapse collapse gray-border-accordion-content"><div class="panel-body">
 <section id="iD01_1"><p><strong>Reunião da Pós Graduação - CAPES</strong></p>
 <p><strong>Horário: </strong>9:00h - 17:00h</p>
 <p><strong>Local: </strong><a class="location1" href="#" idref="loc5">Sala Carvalho I</a></p>
-<hr></section><section id="iD01_2"><p><strong>Reunião Comissão de Apoio</strong></p>
+<hr></section><section id="iD01_2"><p><strong>Reunião Comissão de Apoio e Conselhos Diretor e Consultor</strong></p>
 <p><strong>Horário: </strong>16:00h </p>
 <p><strong>Local: </strong><a class="location1" href="#" idref="loc16">Sala Jequitibá</a></p>
-<hr></section><section id="iD01_3"><p><strong>Reunião Avaliadores</strong></p>
+<hr></section><section id="iD01_3"><p><strong>Reunião Avaliadores e Conselhos Diretor e Consultor</strong></p>
 <p><strong>Horário: </strong>17:00h </p>
 <p><strong>Local: </strong><a class="location1" href="#" idref="loc16">Sala Jequitibá</a></p>
 </section>
 </div></div>
 </div>
 <div xmlns="" class="panel panel-default menu gray-border-accordion">
-<a data-toggle="collapse" data-parent="#accordion" href="#D02"><div class="remote list-group-item accordion-button"><p class="panel-title">Sexta-Feira, 04 de Setembro de 2015</p></div></a><div id="D02" class="panel-collapse collapse gray-border-accordion-content"><div class="panel-body">
+<a data-toggle="collapse" data-parent="#accordion" href="#D02"><div class="remote list-group-item accordion-button"><p class="panel-title">Sexta-feira, 04 de Setembro de 2015</p></div></a><div id="D02" class="panel-collapse collapse gray-border-accordion-content"><div class="panel-body">
 <section id="iD02_1"><p><strong>Abertura da Secretaria</strong></p>
 <p><strong>Horário: </strong>7:00h </p>
 <p><strong>Local: </strong><a class="location1" href="#" idref="loc19">Hall Entrada</a></p>
@@ -412,7 +412,7 @@
 </div></div>
 </div>
 <div xmlns="" class="panel panel-default menu gray-border-accordion">
-<a data-toggle="collapse" data-parent="#accordion" href="#D05"><div class="remote list-group-item accordion-button"><p class="panel-title">Segunda-Feira, 07 de Setembro de 2015</p></div></a><div id="D05" class="panel-collapse collapse gray-border-accordion-content"><div class="panel-body">
+<a data-toggle="collapse" data-parent="#accordion" href="#D05"><div class="remote list-group-item accordion-button"><p class="panel-title">Segunda-feira, 07 de Setembro de 2015</p></div></a><div id="D05" class="panel-collapse collapse gray-border-accordion-content"><div class="panel-body">
 <section id="iD05_1"><p><strong>Abertura da secretaria</strong></p>
 <p><strong>Horário: </strong>7:30h </p>
 <p><strong>Local: </strong><a class="location1" href="#" idref="loc19">Hall Entrada</a></p>
