Adição do Coordenador em Comissão Eleitoral [rmp].

--- a/entregas/conteudoExtra/Comissoes/commissoes.html
+++ b/entregas/conteudoExtra/Comissoes/commissoes.html
@@ -779,13 +779,7 @@
 					<div class="panel-body">
 						<section>
 							<p><strong>Sexta-Feira 04</strong></p>
-							<p><strong>Coordenador: </strong></p>
-							<ul>
-								<li class="list-unstyled">
-									Isabela Almeida Pordeus (UFMG)
-								</li>
-							</ul>
-							<hr>
+							<p><strong>Coordenador: </strong> Isabela Almeida Pordeus (UFMG)</p>
 							<ul>
 								<li class="list-unstyled">
 									<i class="fa fa-caret-right"></i>
@@ -817,13 +811,7 @@
 					<div class="panel-body">
 						<section>
 							<p><strong>Sexta-Feira 04, Sábado 05, Domingo 06</strong></p>
-							<p><strong>Coordenador: </strong></p>
-							<ul>
-								<li class="list-unstyled">
-									Claudia Maria Coelho Alves (UFMA)
-								</li>
-							</ul>
-							<hr>
+							<p><strong>Coordenador: </strong> Claudia Maria Coelho Alves (UFMA)</p>
 							<ul>
 								<li class="list-unstyled">
 									<i class="fa fa-caret-right"></i>
@@ -855,13 +843,7 @@
 					<div class="panel-body">
 						<section>
 							<p><strong>Sexta-Feira 04 Manhã e Tarde</strong></p>
-							<p><strong>Coordenador: </strong></p>
-							<ul>
-								<li class="list-unstyled">
-									Saul Martins de Paiva (UFMG)
-								</li>
-							</ul>
-							<hr>
+							<p><strong>Coordenador: </strong> Saul Martins de Paiva (UFMG)</p>
 							<ul>
 								<li class="list-unstyled">
 									<i class="fa fa-caret-right"></i>
@@ -893,13 +875,7 @@
 					<div class="panel-body">
 						<section>
 							<p><strong>Sábado 05 Manhã e Tarde</strong></p>
-							<p><strong>Coordenador: </strong></p>
-							<ul>
-								<li class="list-unstyled">
-									Saul Martins de Paiva (UFMG)
-								</li>
-							</ul>
-							<hr>
+							<p><strong>Coordenador: </strong> Saul Martins de Paiva (UFMG)</p>
 							<ul>
 								<li class="list-unstyled">
 									<i class="fa fa-caret-right"></i>
@@ -931,13 +907,7 @@
 					<div class="panel-body">
 						<section>
 							<p><strong>Sábado 05, Domingo 06</strong></p>
-							<p><strong>Coordenador: </strong></p>
-							<ul>
-								<li class="list-unstyled">
-									Fernanda Faot (UFPEL)
-								</li>
-							</ul>
-							<hr>
+							<p><strong>Coordenador: </strong> Fernanda Faot (UFPEL)</p>
 							<ul>
 								<li class="list-unstyled">
 									<i class="fa fa-caret-right"></i>
@@ -967,7 +937,9 @@
 				</a>
 				<div id="eleitoral" class="panel-collapse collapse gray-border-accordion-content">
 					<div class="panel-body">
+
 						<section>
+							<p><strong>Coordenador: </strong> Celso Augusto Lemos Junior (FOUSP)</p>
 							<ul>
 								<li class="list-unstyled">
 									<i class="fa fa-caret-right"></i>
@@ -1607,7 +1579,6 @@
 									Antônio Augusto Gomes (UFES)
 								</li>
 								<li class="list-unstyled">
-								</li>
 									<i class="fa fa-caret-right"></i>
 									Antônio Carlos De Oliveira Ruellas (UFRJ)
 								</li>
